SCRUM-4646 add synonym loading for AGMs (#1768)
* SCRUM-4646 add synonym loading for AGMs

* SCRUM-4646 fix checkstyle comments

* SCRUM-4646 fix flyway script file name

* SCRUM-4646 fix checkstyle

* SCRUM-4646 add test logic

* SCRUM-4646 rename flyway script

* SCRUM-4646 add synonyms to persistent objects in the validate method

* SCRUM-4646 add synonyms to persistent objects in the validate method

* more integration tests for null synonyms

* SCRUM-4646 fix case to remove synonym list

* remove unused comment