@@ -212,17 +212,17 @@ public abstract class BaseOntologyTermService<E extends OntologyTerm, D extends 
 			currentSynonyms = new HashSet<>();
 			dbTerm.setSynonyms(new ArrayList<>());
 		} else {
-			currentSynonyms = dbTerm.getSynonyms().stream().collect(Collectors.toSet());
+			currentSynonyms = new HashSet<>(dbTerm.getSynonyms());
 		}
-		List<String> currentSynonymNames = currentSynonyms.stream().map(Synonym::getName).collect(Collectors.toList());
+		List<String> currentSynonymNames = currentSynonyms.stream().map(Synonym::getName).toList();
 
 		Set<Synonym> newSynonyms;
 		if (incomingTerm.getSynonyms() == null) {
 			newSynonyms = new HashSet<>();
 		} else {
-			newSynonyms = incomingTerm.getSynonyms().stream().collect(Collectors.toSet());
+			newSynonyms = new HashSet<>(incomingTerm.getSynonyms());
 		}
-		List<String> newSynonymNames = newSynonyms.stream().map(Synonym::getName).collect(Collectors.toList());
+		List<String> newSynonymNames = newSynonyms.stream().map(Synonym::getName).toList();
 
 		for (Synonym syn: newSynonyms) {
 			if (!currentSynonymNames.contains(syn.getName())) {
